# ga_sar_workflow

./: Dockerfile  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  some_coollllll.py  template.proc
.github/workflows/: docker-image.yml  pytest.yml
configs/: activateNCI.env  createNCIenv.sh
docs/source/: conf.py  index.rst
insar/: calc_baselines_new.py  constant.py  coreg_utils.py  coregister_dem.py  coregister_secondary.py  coregister_slc.py  generate_slc_inputs.py  logs.py  path_util.py  process_alos_slc.py  process_backscatter.py  process_ifg.py  process_s1_slc.py  process_tsx_slc.py  project.py  py_gamma_ga.py  stack.py
insar/docs/: AddNewSensors.md  DatabaseIndexing.md  Installation.md  Logging.md  Metadata.md  Packaging.md  RunningTheWorkflow.md  Stack.md  UnitTesting.md  Workflow.md
insar/gamma/: proxy.py
insar/meta_data/: s1_gridding_utils.py  s1_slc.py
insar/paths/: coregistration.py  dem.py  slc.py  stack.py
insar/scripts/: insar_pbs.py  package_insar.py  process_gamma.py  process_nci_report.py
insar/sensors/: __init__.py  s1.py  (+4 more)
tests/: fixtures.py  py_gamma_test_proxy.py  pygamma_test_proxy.py  test_coreg_utils.py  test_coregister_dem.py  test_coregister_network.py  test_coregister_secondary.py  test_coregister_slc.py  test_process_alos.py  test_process_ifg.py  test_process_rsat2_slc.py  test_process_s1_slc.py  test_process_tsx_slc.py  test_project.py  test_py_gamma_ga.py  test_script_package.py  test_script_pbs.py  test_script_reporting.py  test_sensors.py  test_workflow.py
utils/: gamma_usage2py.py  gamma_usage_gen.bash
(+25 files in other folders)
