[build-system]
requires = ["setuptools>=42", "wheel"]

[tool.black]
line-length = 120
target-version = ['py36', 'py37', 'py38']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | versioneer.py
)
'''

[tool.isort]
length_sort = true
force_sort_within_sections = true
reverse_sort = true

[tool.mypy]
python_version = "3.9"
disallow_untyped_defs = true
show_error_codes = true
no_implicit_optional = true
warn_return_any = true
warn_unused_ignores = true
exclude = ["docs", "configs", "utils", "integration"]

[[tool.mypy.overrides]]
module = [
    "simplekml.*",
    "shapely.*",
    "spatialist",
    "geopandas",
    "luigi.*",
    "osgeo.*",
    "rasterio",
    "eodatasets3",
    "pandas",
    "PIL.*",
    "Pillow",
    "click.*",
    "PyYAML",
    "pkg_resources",
    "yaml",
    "matplotlib",
    "mpl_toolkits.*",
]
ignore_missing_imports = true
